Ensure referral link lookup box stops looking like wide garbage on small mobile.

--- a/app/assets/stylesheets/pledge.css
+++ b/app/assets/stylesheets/pledge.css
@@ -658,6 +658,11 @@
   #pledge .twitch-instructions img {
     max-width: 18em;
   }
+  
+  #referral-lookup .session-box {
+    width: auto;
+    padding: 2em 2em 2em 2em;
+  }
 }
 
 @media (max-width:30em) {
